cabal-version: 3.6
name: mensam
version: 0

flag cabal2nix
  default: False

common language
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    LexicalNegation
    NumDecimals
    OverloadedStrings
    TypeFamilies
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Wno-unticked-promoted-constructors
  if flag(cabal2nix)
    ghc-options:
      -Werror
  else
    ghc-options:
      -fdefer-typed-holes
      -fwrite-ide-info
        -- ^ Generate data for 'weeder'.

common dependencies
  build-depends:
    , aeson
    , attoparsec
    , base
    , base64
    , blaze-html
    , blaze-markup
    , bytestring
    , brick
    , containers
    , deriving-aeson
    , deriving-trans
    , exceptions
    , hashable
    , http-client
    , http-types
    , insert-ordered-containers
    , lens
    , microlens-platform
    , mime-mail
    , monad-control
    , monad-control-identity
    , monad-logger
    , mtl
    , openapi3
    , password
    , resource-pool
    , selda
    , selda-sqlite
    , servant
    , servant-auth
    , servant-auth-server
    , servant-blaze
    , servant-client
    , servant-client-core
    , servant-openapi3
    , servant-rawm
    , servant-rawm-client
    , servant-rawm-server
    , servant-server
    , singletons
    , singletons-th
    , sop-core
    , text
    , time
    , transformers
    , transformers-base
    , unix
    , unliftio-core
    , vty
    , wai
    , wai-app-static
    , wai-control
    , warp

library
  import:
    , dependencies
    , language
  exposed-modules:
    , Mensam.Client
    , Mensam.Client.Brick
    , Mensam.Client.Brick.Type
    , Mensam.Client.Debug
    , Mensam.Client.OrphanInstances
    , Mensam.Server
    , Mensam.Server.Aeson
    , Mensam.Server.Application
    , Mensam.Server.Application.Configured
    , Mensam.Server.Application.Configured.Acquisition
    , Mensam.Server.Application.Configured.Class
    , Mensam.Server.Application.Email
    , Mensam.Server.Application.Email.Class
    , Mensam.Server.Application.Environment
    , Mensam.Server.Application.Environment.Acquisition
    , Mensam.Server.Application.Environment.Class
    , Mensam.Server.Application.Logging
    , Mensam.Server.Application.SeldaPool
    , Mensam.Server.Application.SeldaPool.Class
    , Mensam.Server.Booking
    , Mensam.Server.Configuration
    , Mensam.Server.Configuration.BaseUrl
    , Mensam.Server.Configuration.Email
    , Mensam.Server.Configuration.SQLite
    , Mensam.Server.Database
    , Mensam.Server.Database.Extra
    , Mensam.Server.Database.Schema
    , Mensam.Server.Environment
    , Mensam.Server.OpenApi
    , Mensam.Server.Server
    , Mensam.Server.Server.API
    , Mensam.Server.Server.Auth
    , Mensam.Server.Server.Err404
    , Mensam.Server.Server.FileServer
    , Mensam.Server.Server.Handler
    , Mensam.Server.Server.Handler.RequestHash
    , Mensam.Server.Server.Route
    , Mensam.Server.Server.Route.Booking
    , Mensam.Server.Server.Route.Booking.Type
    , Mensam.Server.Server.Route.OpenApi
    , Mensam.Server.Server.Route.OpenApi.Type
    , Mensam.Server.Server.Route.User
    , Mensam.Server.Server.Route.User.Type
    , Mensam.Server.Server.Route.Static
    , Mensam.Server.Server.Route.Static.Type
    , Mensam.Server.Server.Route.Type
    , Mensam.Server.User
    , Mensam.Server.User.Username
  other-modules:
    , Control.Monad.Catch.OrphanInstances
    , Control.Monad.Logger.OrphanInstances
    , Deriving.Aeson.OrphanInstances
    , Servant.Auth.OrphanInstances
    , System.Posix.Signals.Patterns
  hs-source-dirs: source/library

executable mensam-test
  import:
    , dependencies
    , language
  build-depends:
    , mensam
  main-is: Main.hs
  hs-source-dirs: source/executable/test
  ghc-options:
    -Wno-unused-packages

executable mensam-init
  import:
    , dependencies
    , language
  build-depends:
    , mensam
  main-is: Main.hs
  hs-source-dirs: source/executable/init
  ghc-options:
    -Wno-unused-packages

executable mensam
  build-depends:
    , mensam
  main-is: Main.hs
  hs-source-dirs: source/executable/server
  default-language: GHC2021
  default-extensions:
    NoImplicitPrelude
  ghc-options:
    -threaded

executable mensam-client
  build-depends:
    , mensam
  main-is: Main.hs
  hs-source-dirs: source/executable/client
  default-language: GHC2021
  default-extensions:
    NoImplicitPrelude
  ghc-options:
    -threaded
