cabal-version: 3.6
name: mensam
version: 0

flag cabal2nix
  default: False

common language
  default-language: GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    LexicalNegation
    NumDecimals
    OverloadedStrings
    RoleAnnotations
    TypeData
    TypeFamilies
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-unsafe
    -Wno-unticked-promoted-constructors
  if flag(cabal2nix)
    ghc-options:
      -O2
      -Werror
  else
    ghc-options:
      -fdefer-typed-holes
        -- ^ Recognize typed holes.
      -funclutter-valid-hole-fits
        -- ^ Reduce verbosity of typed holes.
      -fwrite-ide-info
        -- ^ Generate data for 'weeder'.
      -O0
      -Wtyped-holes
        -- ^ Turn typed holes into warnings instead of errors.

common dependencies
  build-depends:
    , aeson
    , attoparsec
    , base
    , base64
    , blaze-html
    , blaze-markup
    , bytestring
    , brick
    , containers
    , deepseq
    , deriving-aeson
    , deriving-trans
    , email-validate
    , exceptions
    , hashable
    , http-client
    , http-client-tls
    , http-media
    , http-types
    , insert-ordered-containers
    , jose
    , JuicyPixels
    , JuicyPixels-extra
    , lens
    , microlens-platform
    , mime-mail
    , monad-control
    , monad-control-identity
    , monad-logger
    , mtl
    , network
    , openapi3
    , optparse-applicative
    , password
    , random
    , resource-pool
    , selda
    , selda-sqlite
    , servant
    , servant-auth
    , servant-auth-server
    , servant-blaze
    , servant-client
    , servant-client-core
    , servant-openapi3
    , servant-rawm
    , servant-rawm-client
    , servant-rawm-server
    , servant-server
    , singletons
    , singletons-th
    , smtp-mail
    , sop-core
    , text
    , time
    , transformers
    , transformers-base
    , tz
    , unix
    , unliftio-core
    , vty
    , vty-unix
    , wai
    , wai-app-static
    , wai-control
    , warp

library
  import:
    , dependencies
    , language
  exposed-modules:
    , Mensam.API.API
    , Mensam.API.Aeson
    , Mensam.API.Aeson.StaticText
    , Mensam.API.Aeson.StaticText.Internal
    , Mensam.API.Aeson.StaticText.Internal.Union
    , Mensam.API.Data.Desk
    , Mensam.API.Data.Reservation
    , Mensam.API.Data.Space
    , Mensam.API.Data.Space.Permission
    , Mensam.API.Data.User
    , Mensam.API.Data.User.Password
    , Mensam.API.Data.User.Username
    , Mensam.API.Order
    , Mensam.API.Route
    , Mensam.API.Route.Api
    , Mensam.API.Route.Api.OpenApi
    , Mensam.API.Route.Api.Reservation
    , Mensam.API.Route.Api.Space
    , Mensam.API.Route.Api.User
    , Mensam.API.Route.Frontend
    , Mensam.API.Route.OpenApi
    , Mensam.API.Route.Static
    , Mensam.API.Update
    , Mensam.Client
    , Mensam.Client.Application
    , Mensam.Client.Application.Event
    , Mensam.Client.Application.Event.Class
    , Mensam.Client.Application.HttpClient
    , Mensam.Client.Application.HttpClient.Class
    , Mensam.Client.Application.MensamClient
    , Mensam.Client.Application.MensamClient.Class
    , Mensam.Client.Application.Options
    , Mensam.Client.Application.Options.Class
    , Mensam.Client.Debug
    , Mensam.Client.OrphanInstances
    , Mensam.Client.UI
    , Mensam.Client.UI.Brick.AttrMap
    , Mensam.Client.UI.Brick.Draw
    , Mensam.Client.UI.Brick.Events
    , Mensam.Client.UI.Brick.Names
    , Mensam.Client.UI.Brick.State
    , Mensam.Client.UI.Desks
    , Mensam.Client.UI.Login
    , Mensam.Client.UI.Menu
    , Mensam.Client.UI.Register
    , Mensam.Client.UI.Spaces
    , Mensam.Server
    , Mensam.Server.Application
    , Mensam.Server.Application.Configured
    , Mensam.Server.Application.Configured.Acquisition
    , Mensam.Server.Application.Configured.Class
    , Mensam.Server.Application.Email
    , Mensam.Server.Application.Email.Class
    , Mensam.Server.Application.Environment
    , Mensam.Server.Application.Environment.Acquisition
    , Mensam.Server.Application.Environment.Class
    , Mensam.Server.Application.LoggerCustom
    , Mensam.Server.Application.LoggerCustom.Class
    , Mensam.Server.Application.Options
    , Mensam.Server.Application.Options.Class
    , Mensam.Server.Application.Secret
    , Mensam.Server.Application.Secret.Class
    , Mensam.Server.Application.SeldaPool
    , Mensam.Server.Application.SeldaPool.Class
    , Mensam.Server.Application.SeldaPool.Servant
    , Mensam.Server.Configuration
    , Mensam.Server.Configuration.BaseUrl
    , Mensam.Server.Configuration.Email
    , Mensam.Server.Configuration.SQLite
    , Mensam.Server.Database.Check
    , Mensam.Server.Database.Extra
    , Mensam.Server.Database.Migration
    , Mensam.Server.Database.Schema
    , Mensam.Server.Database.Space
    , Mensam.Server.Environment
    , Mensam.Server.Jpeg
    , Mensam.Server.OpenApi
    , Mensam.Server.Reservation
    , Mensam.Server.Secrets
    , Mensam.Server.Server
    , Mensam.Server.Server.Auth
    , Mensam.Server.Server.Err404
    , Mensam.Server.Server.FileServer
    , Mensam.Server.Server.Handler
    , Mensam.Server.Server.Handler.Profiler
    , Mensam.Server.Server.Handler.Profiler.Class
    , Mensam.Server.Server.Handler.RequestHash
    , Mensam.Server.Server.Route
    , Mensam.Server.Server.Route.Api
    , Mensam.Server.Server.Route.Api.OpenApi
    , Mensam.Server.Server.Route.Api.Reservation
    , Mensam.Server.Server.Route.Api.Space
    , Mensam.Server.Server.Route.Api.User
    , Mensam.Server.Server.Route.Frontend
    , Mensam.Server.Server.Route.OpenApi
    , Mensam.Server.Server.Route.Static
    , Mensam.Server.Space
    , Mensam.Server.User
  other-modules:
    , Control.Monad.Logger.OrphanInstances
    , Data.Time.Zones.All.OrphanInstances
    , Deriving.Aeson.OrphanInstances
    , Servant.API.ImageJpeg
    , Servant.Auth.OrphanInstances
    , Servant.Auth.JWT.WithSession
    , System.Posix.Signals.Patterns
    , Text.Email.OrphanInstances
    , Text.Email.Text
  hs-source-dirs: source/library

executable mensam-test
  import:
    , dependencies
    , language
  build-depends:
    , mensam
  main-is: Main.hs
  hs-source-dirs: source/executable/test
  ghc-options:
    -Wno-unused-packages

executable mensam-openapi
  import:
    , dependencies
    , language
  build-depends:
    , mensam
  main-is: Main.hs
  hs-source-dirs: source/executable/openapi
  ghc-options:
    -Wno-unused-packages

executable mensam-server
  build-depends:
    , mensam
  main-is: Main.hs
  hs-source-dirs: source/executable/server
  default-language: GHC2021
  default-extensions:
    NoImplicitPrelude
  ghc-options:
    -threaded

executable mensam-client
  build-depends:
    , mensam
  main-is: Main.hs
  hs-source-dirs: source/executable/client
  default-language: GHC2021
  default-extensions:
    NoImplicitPrelude
  ghc-options:
    -threaded
